...
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="24dp"
    android:text="@string/product_name"
    android:textColor="@color/black"
    android:textSize="16sp"
    app:layout_constraintBottom_toTopOf="@+id/MainActivityProductNameInputTextView"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/MainActivityUsernameTextView" />

  <EditText
    android:id="@+id/MainActivityProductNameInputTextView"
    android:layout_width="wrap_content"
...
    android:minHeight="48dp"
    android:textColorHint="#757575"
    app:layout_constraintStart_toStartOf="@+id/MainActivityProductNameTextView"
    app:layout_constraintTop_toBottomOf="@+id/MainActivityProductNameTextView" />

  <Button
    android:id="@+id/MainActivityMoveToOrderFormButton"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="24dp"
    android:text="@string/order_form"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
...
